<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>canary_vendor</name>
  <version>1.0.1</version>
  <description>A lightweight implementation of Linux SocketCAN bindings for ASIO</description>
  <maintainer email="russ@rw.id.au">Russ Webber</maintainer>
  <license>BSL</license>

  <url type="website">https://github.com/djarek/canary</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>asio</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
